Enforce Redis JDBC TLS, ACL authentication and safe parameter binding